# internal/api/response.go
@@ -8,3 +8,8 @@ type Song struct {
 	Text        string `json:"text" example:"oh baby, don't you know I suffer?\nOoh baby, can you hear me moan?\nYou caught me under false pretenses\nHow long before you let me go?\n\nOoh\nYou set my soul alight\nOoh\nYou set my soul alight"`
 	Link        string `json:"link" example:"https://www.youtube.com/watch?v=Xsp3_a-PMTw"`
 }
+
+type Text struct {
+	VerseNumber int    `json:"verse_number" example:"1"`
+	Verse       string `json:"verse" example:"Never gonna give you up\n"`
+}
